--- a/src/app/settings/templates/select-input-forms/select-input-forms.component.html
+++ b/src/app/settings/templates/select-input-forms/select-input-forms.component.html
@@ -13,7 +13,7 @@
           <div class="header text-center">
             {{item.ifName}}
           </div>
-          <div class="body pt-2 pb-2">
+          <div class="body fadeBottom pt-2 pb-2">
             <span>Name</span>
             <div class="progress inputForms mb-2">
               <div class="progress-bar bg-white w-100 border" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -31,9 +31,9 @@
               <div class="progress-bar bg-white w-100 border" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
-          <div class="selected">
+          <button class="highlightSector" (click)="selectInputForms($event)">
             <i class="fa fa-check text-white" aria-hidden="true"></i>
-          </div>
+          </button>
         </div>
         <!-- <div class="card" style="border: 1px solid rgba(0,0,0,.125);border-radius: 0.5rem">
 
