--- a/src/app/users/crc/crc.component.html
+++ b/src/app/users/crc/crc.component.html
@@ -1,4 +1,4 @@
-<div class="tempDiv">
+<div class="crcMain">
     <div class="card-header">
         <div class="row align-items-center">
             <div class="col">
@@ -6,17 +6,17 @@
                     <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 userDetails">
                         <span class="avatarLetter">U2</span>
                         <div class="btn-group ">
-                            <button type="button" class="dropButt" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                            <button type="button" class="dropButt" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">                                
+                                <i class="fa fa-ellipsis-h" aria-hidden="true"></i>                                
                             </button>
                             <span class="nameTxt">Tom Clarke</span>
                             <span class="requestTxt">Request #314944</span>
-                            <button type="button" class="blueDropButt" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                            <button type="button" class="blueDropButt" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">                                
+                                <i class="fa fa-angle-down" aria-hidden="true"></i>                                
                             </button>
                             <span class="timeTxt">
                                 <i class="fa fa-clock-o" aria-hidden="true"></i>
-                                Due in 5 Days
+                            Due in 5 Days
                             </span>
                             <div class="dropdown-menu dropdown-menu-right">
                                 <button class="dropdown-item" type="button">Link One</button>
@@ -49,7 +49,7 @@
             </div>
             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 rightCont">
                 <div class="dragFileArea">
-
+                    
                     <ng-template matStepLabel>Chose Files</ng-template>
                     <div class="stageEmpty isSmall">
                         <span>Drag files here or click to upload</span>
@@ -239,6 +239,8 @@
                                         </div>
                                     </div>
 
+
+                                   
                                 </div>
                             </ng-template>
                         </ngb-tab>
