--- a/src/app/users/crc/crc.component.scss
+++ b/src/app/users/crc/crc.component.scss
@@ -1,10 +1,13 @@
-.tempDiv{
-    float: right;
-    margin: 20px;
-    width: 97%;
+$primaryColor:#50e3c2;
+$secondryColor:#0080ff;
+$thirdColor:#575757;
+$fourColor:#595959;
+$fifthColor:#cdcdcd;
+
+.crcMain{
     background: #fff;
     border-radius: 5px;
-}
+
 .card-header{
     background: #fff;
     .userDetails{
@@ -37,7 +40,7 @@
             display: block;
             margin-bottom: 8px;
             a{
-                background: #cdcdcd;
+                background: $fifthColor;
                 border-radius: 4px;
                 color: #fff;
                 line-height: 18px;
@@ -46,13 +49,13 @@
                 margin-right:8px;
             }
             a.active{
-                background: #575757;
+                background: $thirdColor;
             }
             a:hover{
                 text-decoration: none;
             }
             .badge{
-                background: #0080ff;
+                background: $secondryColor;
                 color:#fff;
                 border-radius: 1rem;
             }
@@ -78,7 +81,7 @@
     .dragFileArea{      
         text-align: center;
         font-size: 18px;
-        color:#0080ff;
+        color:$secondryColor;
         display: block;
         margin: 20px 0 0;
         a{
@@ -98,10 +101,10 @@
                     text-align: center;    
                     font-size: 18px;
                     font-weight:bold;
-                    color:#595959;  
+                    color:$fourColor;  
                     margin-right: 10px;
                     a{
-                        color:#595959;
+                        color:$fourColor;
                         padding: 8px 15px 4px;
                         margin: 0;
                     }              
@@ -109,7 +112,7 @@
                 li.active{
                     background: #fff;
                     a{
-                        border-top:solid 2px #50e3c2;
+                        border-top:solid 2px $primaryColor;
                     }                    
                 }
             }
@@ -121,7 +124,7 @@
         margin: 30px 0;
         h4{
             font-size: 14px; 
-            color: #595959;
+            color: $fourColor;
             border-bottom:solid 1px #e6e6e6;
             margin-bottom: 15px;
             text-transform: uppercase;
@@ -173,12 +176,12 @@
                     left: 0;
                     width: 100%;
                     .progress-bar{
-                        background-color: #50e3c2;
+                        background-color: $primaryColor;
                         box-shadow: none!important;
                     }
                 } 
                 .progressOk{
-                    background: #50e3c2;
+                    background: $primaryColor;
                     border-radius:50%;
                     position: absolute;
                     bottom: -12px;
@@ -254,7 +257,7 @@
                         box-shadow: none; 
                         width:100px;
                         .progress-bar{
-                            background-color: #50e3c2;
+                            background-color: $primaryColor;
                             box-shadow: none!important;
                         }
                     }
@@ -321,7 +324,7 @@
     border-radius: 0!important; 
 }
 .nav-link.active{
-    border-top:solid 2px #50e3c2!important;
+    border-top:solid 2px $primaryColor!important;
 }
 .stageEmpty.isSmall{
     background: none!important;
@@ -336,4 +339,107 @@
 
 .nav-link{
     background: #000;
+}
+
+
+.avatarLetter {
+    border-radius: 50%;
+    display: inline-block;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    height: 46px;
+    width: 49px;
+    z-index: 0;
+    line-height: 46px;
+    padding: 0;
+    font-size: 1rem;
+    color: #ffffff;
+    background-color: #1da6fc;
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: 1px; 
+    float:left;
+  }
+  .dropButt{
+    background: none;
+    border: none;
+    font-size: 18px;
+    margin: 7px 0 0 10px;
+    padding: 0 11px 5px;
+    color:#a7a7a7;
+  }
+  .blueDropButt{
+    background: none;
+    border: none;  
+    color:#0a85ff;
+  }
+  .nameTxt{
+    display: inline-block;
+    padding: 8px 0;
+    font-size: 18px;
+  }
+  .requestTxt{
+    color:#0a85ff;
+    padding: 11px 0px 8px 20px;
+  }
+  .timeTxt{
+    color: #ff0000;
+    padding: 8px 0 8px 20px;  
+  }
+  .timeTxt i{
+    font-size: 22px;
+  }
+  .uploadTime{
+    display: block;
+    font-size: 11px;
+    color: #a9a9a9;
+  }
+ 
+  
+
+
+    .selected-list .c-btn {
+        box-shadow: none !important;
+        border: 0 !important;
+        display: inline-block !important;
+        width: auto !important;
+        position: relative !important; }
+      
+      .selected-list .c-list .c-token .fa-remove {
+        margin-left: 10px !important;
+        margin-right: 2px; }
+      
+      .selected-list .fa-angle-down,
+      .selected-list .fa-angle-up {
+        padding: 2px 4px !important;
+          font-size: 13px !important;
+          border-radius: 50%!important;
+          background: #03d0bf;
+          color: #fff;
+          right:-10px!important;
+      }
+      
+      .selected-list .c-list .c-token {
+        background: $thirdColor !important;
+        border-radius: 4px !important;
+        display: inline-block;
+        font-size: 12px;  
+       }
+       .c-label{
+        display: block;
+        float: left;
+        padding: 0px 3px 2px;
+      }
+      .fa-remove{
+          font-size: 12px;
+          z-index: 100000000;
+          background: #bbbbbb;
+          border-radius: 50%;    
+          padding: 1px 2px;
+          color: $thirdColor;
+      }
+
+    
+
 }
